tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_round_banner_reconnecting_status_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---
• CodexPotter: iteration round 1/10 (gpt-5.2 xhigh)

• CodexPotter: retry 3/10
  └ Stream disconnected before completion: error sending request for url
    (https://free.xxsxx.fun/v1/responses)

• Round 1/10 (0s) · Reconnecting... 1/5 (0s) · 100% context left
  └ Stream disconnected before completion: error sending request for url
    (https://free.xxsxx.fun/v1/responses)


› Assign new task to CodexPotter

  project [main] · ctrl+g editor
